temporary to share

--- a/abouttroop.html
+++ b/abouttroop.html
@@ -18,12 +18,12 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Girl Scouts Troop 147050 <br> <em>Houston, Texas 77025</em></a></h1>
+						<h1><a href="abouttroop.html" id="logo">Girl Scouts Troop 147050 <br> <em>Houston, Texas 77025</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="abouttroop.html">Home</a></li>
 								
 								<li class="current"><a href="abouttroop.html">About Our Troop</a></li>
 							<!--	<li>
@@ -45,10 +45,10 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>-->
-								<<li><a href="about.html">About Girl Scouts</a></li>
-								<li><a href="FAQs.html">FAQs</a></li>
-								<li><a href="contact.html">Contact Us</a></li>
-								<li><a href="joinus.html">Join Us!</a></li>
+								<<li><a href="#">About Girl Scouts</a></li>
+								<li><a href="#">FAQs</a></li>
+								<li><a href="#">Contact Us</a></li>
+								<li><a href="#">Join Us!</a></li>
 							</ul>
 						</nav>
 
@@ -100,7 +100,7 @@
 					</div>
 				</section>
 
-			<!-- Footer -->
+			<!-- Footer 
 				<div id="footer">
 					<div class="container">
 						<div class="row">
@@ -151,8 +151,8 @@
 							</section>
 						</div>
 					</div>
-
-					<!-- Icons -->
+-->
+					<!-- Icons 
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -160,7 +160,7 @@
 							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
 						</ul>
-
+-->
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
