--- a/abouttroop.html
+++ b/abouttroop.html
@@ -64,12 +64,12 @@
 								<article>
 									<header>
 										<h2>About Our Troop</h2>
-										<p>Meetings weekly, Fridays at <a href="https://www.google.com/maps/search/?api=1&query=Linkwood%20Park%203699%20Norris%20Dr%2C%20Houston%2C%20TX%2077025">Linkwood Park and Community Center</a></p>
+										<p>Meetings weekly, Fridays 4pm - 6pm at <a href="https://www.google.com/maps/search/?api=1&query=Linkwood%20Park%203699%20Norris%20Dr%2C%20Houston%2C%20TX%2077025">Linkwood Park and Community Center</a></p>
 									</header>
 
 									<span class="image featured"><img src="images/pexels-cottonbro-9291040.jpg" alt="" /></span>
 									<h3>Where are troop meetings?</h3>
-									<p>We meet at <a href="https://www.google.com/maps/search/?api=1&query=Linkwood%20Park%203699%20Norris%20Dr%2C%20Houston%2C%20TX%2077025">Linkwood Park and Community Center</a> on Friday afternoons. <b>Meetings will be mostly outdoors.</b> There is also a room inside the community center for our use. Restrooms and water fountains are available inside the community center</p>
+									<p>We meet at <a href="https://www.google.com/maps/search/?api=1&query=Linkwood%20Park%203699%20Norris%20Dr%2C%20Houston%2C%20TX%2077025">Linkwood Park and Community Center</a> on Friday afternoons from 4pm - 6pm. <b>Meetings will be mostly outdoors.</b> There is also a room inside the community center for our use. Restrooms and water fountains are available inside the community center</p>
 									
 									<h3>Who can join?</h3>
 									<p>Our troop is open to <i><b>all</i> girls in 1st - 3rd grade.</b> Girl Scouts is <b>inclusive</b> and "ask(s) for all Girl Scouts—girls, volunteers, alums, supporters, families, staff, and our suppliers and service providers—to commit to taking action to make the world a more equitable place". <b>We are a multi-school troop and welcome children from all schools</b></p>
