Index Page and URL changes

--- a/abouttroop.html
+++ b/abouttroop.html
@@ -23,7 +23,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="abouttroop.html">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								
 								<li class="current"><a href="abouttroop.html">About Our Troop</a></li>
 							<!--	<li>
@@ -48,7 +48,7 @@
 								<<li><a href="#">About Girl Scouts</a></li>
 								<li><a href="#">FAQs</a></li>
 								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Join Us!</a></li>
+								<li><a href="https://mygs.girlscouts.org/map;troopNumber=;id=B-11512321;distanceInMiles=1;address=,,77025,;grades=2;season=Current;type=TROOP;troopsDistanceInMiles=1">Join Us!</a></li>
 							</ul>
 						</nav>
 
