--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="abouttroop.html">About Our Troop</a>
+									<a href="abouttroop.html">Our Troop</a>
 								<!--<li>	<ul>
 										<li><a href="#">Lorem dolor</a></li>
 										<li><a href="#">Magna phasellus</a></li>
@@ -43,10 +43,10 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>-->
-								<li><a href="about.html">About Girl Scouts</a></li>
-								<li><a href="FAQs.html">FAQs</a></li>
-								<li><a href="contact.html">Contact Us</a></li>
-								<li><a href="joinus.html">Join Us!</a></li>
+								<li><a href="#">About Girl Scouts</a></li>
+								<li><a href="#">FAQs</a></li>
+								<li><a href="#">Contact Us</a></li>
+								<li><a href="https://mygs.girlscouts.org/map;troopNumber=;id=B-11512321;distanceInMiles=1;address=,,77025,;grades=2;season=Current;type=TROOP;troopsDistanceInMiles=1">Join Us!</a></li>
 							</ul>
 						</nav>
 
@@ -55,8 +55,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
-						<a href="#" class="button">Learn More</a>
+						<h2><em>Making sure girls see and have the opportunity to reach their potential in an inclusive girl-led community supported by our parent volunteers and our <a href="https://www.gssjc.org/">local Girl Scout Council</a></em></h2>
+						<a href="abouttroop.html" class="button">Learn More</a>
 					</header>
 				</section>
 
@@ -67,29 +67,33 @@
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-tree"></i>
-									<h3>This Is Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<h3><a href="https://www.girlscouts.org/content/dam/girlscouts-gsusa/forms-and-documents/for-adults/volunteer/GSUSA_OutdoorProgression.pdf">Girl Scout Outdoor Progression</a> </h3>
+									<p>Progression allows girls to learn the skills they need to become competent in the outdoors, including how to plan and organize outdoor activities</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-campground"></i>
-									<h3>Also Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<h3><a href="https://www.girlscoutsla.org/content/dam/girlscoutsla-redesign/documents/volunteer-training/Short-Snappy-Girl-Led-Progression.pdf">Girl Scouts is Girl-Led</a></h3>
+									<p>Girl-led means	the girls should be in control of all aspects of their Girl Scout
+experience. Progression enables girls to acquire the
+necessary skills to become competent leaders. As girls
+progress towards higher levels of complexity and difficulty, they’ll also
+take on more and more responsibilities. </p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-hiking"></i>
-									<h3>Probably Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<h3><a href="https://www.girlscouts.org/en/discover/about-us/what-girl-scouts-do/promise-and-law.html">Girl Scout Promise and Law</a></h3>
+									<p>Girl Scouts of all ages recite—and live by—the ideals listed in the Girl Scout Promise and Law. They remind us to do our best in being kind to others, respecting ourselves, making the world a better place, and so much more.</p>
 								</div>
 							</section>
 						</div>
 					</div>
 				</section>
 
-			<!-- Gigantic Heading -->
+			<!-- Gigantic Heading 
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
@@ -98,8 +102,8 @@
 						</header>
 					</div>
 				</section>
-
-			<!-- Posts -->
+-->
+			<!-- Posts 
 				<section class="wrapper style1">
 					<div class="container">
 						<div class="row">
@@ -144,8 +148,8 @@
 						</div>
 					</div>
 				</section>
-
-			<!-- CTA -->
+-->
+			<!-- CTA 
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
@@ -154,8 +158,9 @@
 						</header>
 					</div>
 				</section>
-
+-->
 			<!-- Footer -->
+			 <!--
 				<div id="footer">
 					<div class="container">
 						<div class="row">
@@ -184,8 +189,10 @@
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
+						-->
+								<br>
 								<h3>Get In Touch</h3>
-								<form>
+								<form action="https://formspree.io/f/mpwlbvnp" method="POST">
 									<div class="row gtr-50">
 										<div class="col-6 col-12-mobilep">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -207,7 +214,7 @@
 						</div>
 					</div>
 
-					<!-- Icons -->
+					<!-- Icons 
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -215,7 +222,7 @@
 							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
 						</ul>
-
+-->
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
