Update GS Green Color

--- a/abouttroop.html
+++ b/abouttroop.html
@@ -23,7 +23,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="abouttroop.html">Home</a></li>
 								
 								<li class="current"><a href="abouttroop.html">About Our Troop</a></li>
 							<!--	<li>
@@ -88,7 +88,7 @@
 									<p>“<b>Girl-led means the girls should be in control of all aspects of their Girl Scout experience.</b> We know this sometimes results in a less than organized and time-consuming experience, but that’s okay. Girls need to be able to learn in a safe environment! We also know that girls of different age levels are capable of different levels of leadership. That is where progression comes in. Progression enables girls to acquire the necessary skills to become competent leaders. They start at one level and practice the skills they need to get to the next level. As girls progress towards higher levels of complexity and difficulty, they’ll also take on more and more responsibilities." <a href="https://www.girlscoutsla.org/content/dam/girlscoutsla-redesign/documents/volunteer-training/Short-Snappy-Girl-Led-Progression.pdf">Girl-Led Progression</a>
 
 										<h3>How to Join</h3>
-										<p><b>Click the button</b> below to find our Troop 147050 on the Girl Scouts website and sign up your child for our troop. Be sure to <b>register yourself also so you can volunteer with our troop meetings and activities.</b> Volunteers working with girls are required to complete 591 Volunteer Basics and GSUSA Girl Scouts Child Abuse and Neglect Prevention Training available online in gsLearn through your MYGS account. 
+										<p><b>Click the button</b> below to find our Troop 147050 on the Girl Scouts website and sign up your child for our troop. Be sure to <b>register yourself also so you can volunteer with our troop meetings and activities.</b> Volunteers working with girls are required to complete 591 Volunteer Basics and GSUSA Girl Scouts Child Abuse and Neglect Prevention Training available online in gsLearn through your <a href="https://mygs.girlscouts.org/">MYGS account.</a>  
 </p>
 										<p> For the 2025–2026 <b>Girl Scout membership year dues are $45 for girls and $30 for adults</b>. "Nothing should stand in the way of a girl reaching her full leadership potential through Girl Scouting. That’s why our council’s financial aid program is dedicated to removing financial barriers, ensuring that every girl has access to our leadership development opportunities.<b>Girls and volunteers can apply for financial aid to help cover the cost of membership, uniforms, and program registration fees.</b> In fact, nearly half of our members participate in Girl Scouting with the support of some form of financial assistance.” <a href="https://www.gssjc.org/en/members/for-parents-and-families/financial-aid.html">Girl Scouts of San Jacinto Financial Aid</a>
 </p>
