--- a/abouttroop.html
+++ b/abouttroop.html
@@ -18,12 +18,12 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="abouttroop.html" id="logo">Girl Scouts Troop 147050 <br> <em>Houston, Texas 77025</em></a></h1>
+						<h1><a href="index.html" id="logo">Girl Scouts Troop 147050 <br> <em>Houston, Texas 77025</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="abouttroop.html">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								
 								<li class="current"><a href="abouttroop.html">About Our Troop</a></li>
 							<!--	<li>
@@ -46,7 +46,7 @@
 									</ul>
 								</li>-->
 								<<li><a href="#">About Girl Scouts</a></li>
-								<li><a href="#">FAQs</a></li>
+								<li><a href="faq.html">FAQs</a></li>
 								<li><a href="#">Contact Us</a></li>
 								<li><a href="https://mygs.girlscouts.org/map;troopNumber=;id=B-11512321;distanceInMiles=1;address=,,77025,;grades=2;season=Current;type=TROOP;troopsDistanceInMiles=1">Join Us!</a></li>
 							</ul>
@@ -67,7 +67,7 @@
 										<p>Meetings weekly, Fridays 4pm - 6pm at <a href="https://www.google.com/maps/search/?api=1&query=Linkwood%20Park%203699%20Norris%20Dr%2C%20Houston%2C%20TX%2077025">Linkwood Park and Community Center</a></p>
 									</header>
 
-									<span class="image featured"><img src="images/pexels-cottonbro-9291040.jpg" alt="" /></span>
+									<span class="image featured"><img src="images/pexels-rayhan-ahmed-516407647-33505178.jpg" alt="" /></span>
 									<h3>Where are troop meetings?</h3>
 									<p>We meet at <a href="https://www.google.com/maps/search/?api=1&query=Linkwood%20Park%203699%20Norris%20Dr%2C%20Houston%2C%20TX%2077025">Linkwood Park and Community Center</a> on Friday afternoons from 4pm - 6pm. <b>Meetings will be mostly outdoors.</b> There is also a room inside the community center for our use. Restrooms and water fountains are available inside the community center</p>
 									
