--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									</ul>
 								</li>-->
 								<li><a href="#">About Girl Scouts</a></li>
-								<li><a href="#">FAQs</a></li>
+								<li><a href="faq.html">FAQs</a></li>
 								<li><a href="https://mygs.girlscouts.org/map;troopNumber=;id=B-11512321;distanceInMiles=1;address=,,77025,;grades=2;season=Current;type=TROOP;troopsDistanceInMiles=1">Join Us!</a></li>
 							</ul>
 						</nav>
