About GS page - edits

--- a/aboutgs.html
+++ b/aboutgs.html
@@ -63,7 +63,7 @@
 
 								<article>
 									<header>
-										<h2>About Girl Scouts of San Jacinto Council</h2>
+										<h2>Girl Scouts of San Jacinto Council - Our Extended Family</h2>
 										<p>Our troop could not be here without the hard work and dedication of all our adult volunteers! However we are not alone and have an incredible support team. Our troop is part of a Girl Scout family that extends from our neighborhood to Southwest Houston to Southeast Texas and on to our country and the world. </p>
 									</header>
 
