--- a/abouttroop.html
+++ b/abouttroop.html
@@ -45,7 +45,7 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>-->
-								<<li><a href="#">About Girl Scouts</a></li>
+								<<li><a href="aboutgs.html">About Girl Scouts</a></li>
 								<li><a href="faq.html">FAQs</a></li>
 								<li><a href="#">Contact Us</a></li>
 								<li><a href="https://mygs.girlscouts.org/map;troopNumber=;id=B-11512321;distanceInMiles=1;address=,,77025,;grades=2;season=Current;type=TROOP;troopsDistanceInMiles=1">Join Us!</a></li>
